# USTC_CG_26

./: .gitmodules
Framework2D/: Doxyfile
Framework2D/class_diagrams/: doxygen_crawl.html  index.html  navtreedata.js
Framework2D/src/assignments/2_ImageWarping/: CMakeLists.txt  warping_widget.cpp  warping_widget.h  warping_window.cpp
Framework2D/src/assignments/2_ImageWarping/warper/: Holefill.cpp  Holefill.h  IDW_warper.cpp  IDW_warper.h  Neural_warper.cpp  Neural_warper.h  RBF_warper.cpp  RBF_warper.h  warper.cpp  warper.h
FrameworkDDPM/: dataloader.py  forward_noising.py  sampling.py  training_model.py  unet.py
FrameworkRenderformer/: baseline_data.py  baseline_loss.py  baseline_model.py  build_pt_dataset_from_blender.py  evaluate_all.py  local_tex_utils.py  requirements-cpu.txt  requirements.txt  train_course_baseline.py
FrameworkRenderformer/local_renderformer/: __init__.py  compat_einops.py  hub.py
Homeworks/: README.md
Homeworks/10_sph_fluid/: README.md
Homeworks/2_image_warping/: README.md
Homeworks/2_image_warping/documents/dlib_example/: CMakeLists.txt  README.md
Homeworks/2_image_warping/documents/dlib_example/data/: training_set.txt
Homeworks/2_image_warping/documents/dlib_example/src/: dlib_example.cpp
Homeworks/3_poisson_image_editing/: README.md
Homeworks/4_ddpm/: README.md
Homeworks/5_tutte_parametrzation/: NodeIntroduction.md  README.md
Homeworks/6_arap_parametrzation/: README.md
Homeworks/7_rasterization_and_path_tracing/: README.md
Homeworks/8_renderformer/: README.md  dataset.md  guide.md  setup.md  submission.md  (+1 more)
(+899 files in other folders)
